--- a/environments/dev/auth-service.yaml
+++ b/environments/dev/auth-service.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: auth-service
-          image: sanketdesai09/auth-service:latest
+          image: sanketdesai09/auth-service:does-not-exist
           imagePullPolicy: Always
           ports:
             - containerPort: 4000
