Revert "Break auth-service image intentionally"
This reverts commit 816cfadcbd7cd5b5c92603cf887c49a2caa7081e.

--- a/environments/dev/auth-service.yaml
+++ b/environments/dev/auth-service.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: auth-service
-          image: sanketdesai09/auth-service:does-not-exist
+          image: sanketdesai09/auth-service:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 4000
