fixed syntax issue in product-service regurding type

--- a/environments/dev/product-service.yaml
+++ b/environments/dev/product-service.yaml
@@ -38,8 +38,7 @@ metadata:
   name: product-service
   namespace: shop-platform
 spec:
-  type:
-    - ClusterIP
+  type: ClusterIP
   selector:
     app: product-service
   ports:
