order service and database manifests added for gitops

--- a/environments/dev/kustomization.yaml
+++ b/environments/dev/kustomization.yaml
@@ -3,6 +3,8 @@ resources:
   - auth-mongo.yaml
   - product-mongo.yaml
   - cart-redis.yaml
+  - order-mongo.yaml
   - auth-service.yaml
   - product-service.yaml
   - cart-service.yaml
+  - order-service.yaml
