--- a/environments/dev/order-mongo.yaml
+++ b/environments/dev/order-mongo.yaml
@@ -17,7 +17,7 @@ spec:
         - name: mongo
           image: mongo:4.4
           imagePullPolicy: Always
-          port:
+          ports:
             - containerPort: 27017
           volumeMounts:
             - name: mongo-data
@@ -38,4 +38,4 @@ spec:
     app: order-mongo
   ports:
     - port: 27017
-      containerPort: 27017
+      targetPort: 27017
