--- a/environments/dev/order-service.yaml
+++ b/environments/dev/order-service.yaml
@@ -21,14 +21,20 @@ spec:
             - containerPort: 7000
           env:
             - name: PORT
-              value: "7000"
+              valueFrom:
+                configMapKeyRef:
+                  name: order-config
+                  key: PORT
             - name: MONGO_URI
-              value: "mongodb://order-db:27017/orderdb"
+              valueFrom:
+                configMapKeyRef:
+                  name: order-config
+                  key: MONGO_URI
             - name: JWT_SECRET
               valueFrom:
                 secretKeyRef:
                   name: app-secrets
-                  value: JWT_SECRET
+                  key: JWT_SECRET
           resources:
             requests:
               cpu: "100m"
