--- a/environments/dev/ingress.yaml
+++ b/environments/dev/ingress.yaml
@@ -3,14 +3,12 @@ kind: Ingress
 metadata:
   name: shop-platform-ingress
   namespace: shop-platform
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   rules:
     - host: shop.local
       http:
         paths:
-          - path: /api/auth(/|$)(.*)
+          - path: /api/auth
             pathType: Prefix
             backend:
               service:
@@ -18,7 +16,7 @@ spec:
                 port:
                   number: 4000
 
-          - path: /api/products(/|$)(.*)
+          - path: /api/products
             pathType: Prefix
             backend:
               service:
@@ -26,7 +24,7 @@ spec:
                 port:
                   number: 5000
 
-          - path: /api/cart(/|$)(.*)
+          - path: /api/cart
             pathType: Prefix
             backend:
               service:
@@ -34,7 +32,7 @@ spec:
                 port:
                   number: 6001
 
-          - path: /api/orders(/|$)(.*)
+          - path: /api/orders
             pathType: Prefix
             backend:
               service:
@@ -42,7 +40,7 @@ spec:
                 port:
                   number: 7000
 
-          - path: /(.*)
+          - path: /
             pathType: Prefix
             backend:
               service:
