removed host from ingress

--- a/environments/dev/ingress.yaml
+++ b/environments/dev/ingress.yaml
@@ -5,8 +5,7 @@ metadata:
   namespace: shop-platform
 spec:
   rules:
-    - host: shop.local:8070
-      http:
+    - http:
         paths:
           - path: /api/auth
             pathType: Prefix
