--- a/environments/dev/ingress.yaml
+++ b/environments/dev/ingress.yaml
@@ -7,7 +7,7 @@ spec:
   rules:
     - http:
         paths:
-          - path: /api/auth
+          - path: /auth
             pathType: Prefix
             backend:
               service:
@@ -15,7 +15,7 @@ spec:
                 port:
                   number: 4000
 
-          - path: /api/products
+          - path: /products
             pathType: Prefix
             backend:
               service:
@@ -23,7 +23,7 @@ spec:
                 port:
                   number: 5000
 
-          - path: /api/cart
+          - path: /cart
             pathType: Prefix
             backend:
               service:
@@ -31,7 +31,7 @@ spec:
                 port:
                   number: 6001
 
-          - path: /api/orders
+          - path: /orders
             pathType: Prefix
             backend:
               service:
